@@ -52,6 +52,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #18559: Fix NULL pointer dereference error in _pickle module
+
 - Issue #18556: Check the return value of a PyUnicode_AsWideChar() call in
   ctypes' U_set().
 
